@@ -463,7 +463,7 @@ public class HTableDescriptor implements WritableComparable<HTableDescriptor> {
    */
   @Override
   public String toString() {
-    StringBuffer s = new StringBuffer();
+    StringBuilder s = new StringBuilder();
     s.append('{');
     s.append(HConstants.NAME);
     s.append(" => '");
