@@ -273,7 +273,7 @@ public class Delete implements Writable, Row, Comparable<Row> {
    */
   @Override
   public String toString() {
-    StringBuffer sb = new StringBuffer();
+    StringBuilder sb = new StringBuilder();
     sb.append("row=");
     sb.append(Bytes.toString(this.row));
     sb.append(", ts=");
