@@ -404,7 +404,7 @@ public class Put implements HeapSize, Writable, Row, Comparable<Row> {
    */
   @Override
   public String toString() {
-    StringBuffer sb = new StringBuffer();
+    StringBuilder sb = new StringBuilder();
     sb.append("row=");
     sb.append(Bytes.toString(this.row));
     sb.append(", families={");
