@@ -149,7 +149,7 @@ public class TimeRange implements Writable {
   
   @Override
   public String toString() {
-    StringBuffer sb = new StringBuffer();
+    StringBuilder sb = new StringBuilder();
     sb.append("maxStamp=");
     sb.append(this.maxStamp);
     sb.append(", minStamp=");
