@@ -276,6 +276,8 @@ Release 0.21.0 - Unreleased
    HBASE-2083  [EC2] HDFS DataNode no longer required on master
    HBASE-2084  [EC2] JAVA_HOME handling broken
    HBASE-2036  Use Configuration instead of HBaseConfiguration (Enis Soztutar via Stack)
+   HBASE-2085  StringBuffer -> StringBuilder - conversion of references as necessary
+               (Kay Kay via Stack)
 
   NEW FEATURES
    HBASE-1901  "General" partitioner for "hbase-48" bulk (behind the api, write
